# rust-word-game

./: .gitignore  Cargo.toml  README.md  index.html  styles.scss
src/: game.rs  generateDictionary.rs  lib.rs  main.rs
src/game/: character_display.rs  game_board.rs  logic.rs  main_menu.rs  suggestion.rs  words.rs
