[package]
name = "rust_word_game"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
yew = "0.19.3"
getrandom = { version = "0.2", features = ["js"] }
web-sys = "0.3.58"
regex = "1"
wasm-logger = "0.2.0"
log = "0.4.17"